--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <ul class="package-items">
                     <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
                     <li>Kurma</li>
-                    <li>Nextar Box</li>
+                    <li>Snack</li>
                     <li>Kartu Ucapan</li>
                 </ul>
             </div>
@@ -331,7 +331,7 @@
                 <ul class="package-items">
                     <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
                     <li>Kurma</li>
-                    <li>Mangkuk</li>
+                    <li>Mangkuk Keramik</li>
                     <li>Tasbih Digital</li>
                     <li>Kartu Ucapan</li>
                 </ul>
@@ -352,15 +352,13 @@
 
             <div class="package">
                 <div class="package-header">
-                    <span class="package-name">Paket V</span>
-                    <span class="package-price">70.000</span>
+                    <span class="package-name">Paket D</span>
+                    <span class="package-price">~55rb~ 45.000</span>
                 </div>
                 <ul class="package-items">
                     <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
-                    <li>Kurma</li>
+                    <li>tumbler</li>
                     <li>Tasbih Digital</li>
-                    <li>Nextar Box</li>
-                    <li>Sajadah</li>
                     <li>Kartu Ucapan</li>
                 </ul>
             </div>
@@ -385,3 +383,4 @@
 </body>
 
 </html>
+
