--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="package">
                 <div class="package-header">
                     <span class="package-name">Paket D</span>
-                    <span class="package-price">̶5̶5̶ ̶r̶b̶  45.000</span>
+                    <span class="package-price">̶̶5̶5̶.̶0̶0̶0̶  45.000</span>
                 </div>
                 <ul class="package-items">
                     <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
@@ -383,5 +383,6 @@
 </body>
 
 </html>
+
 
 
