--- a/index.html
+++ b/index.html
@@ -357,13 +357,29 @@
                 </div>
                 <ul class="package-items">
                     <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
-                    <li>tumbler</li>
+                    <li>Tumbler</li>
                     <li>Tasbih Digital</li>
                     <li>Kartu Ucapan</li>
                 </ul>
             </div>
         </div>
 
+          <div class="package">
+                <div class="package-header">
+                    <span class="package-name">Paket E</span>
+                    <span class="package-price">̶̶70.000</span>
+                </div>
+                <ul class="package-items">
+                    <li>Roti Kacang Toples 400gr (Ori/Pandan)</li>
+                    <li>Kurma</li>
+                    <li>Tasbih Digital</li>
+                    <li>Snack</li>
+                    <li>Sajadah</li>
+                    <li>Kartu Ucapan</li>
+                </ul>
+            </div>
+        </div>
+    
         <div class="cta-section">
             <button class="cta-button">PESAN SEKARANG</button>
         </div>
@@ -383,6 +399,7 @@
 </body>
 
 </html>
+
 
 
 
